--- a/html/type-detail.html
+++ b/html/type-detail.html
@@ -58,7 +58,7 @@
 			</nav>
 			<div class="row">
 				<div class="col-4">
-					<a class="list-group-item list-group-item-success" href="#list-item-1"><h5>Danh mục</h5></a>
+					<a class="list-group-item list-group-item-success" href="#list-item-1"><h5>Menu</h5></a>
 					<a class="list-group-item list-group-item-action" href="#list-item-1">Anime</a>
 					<a class="list-group-item list-group-item-action" href="#list-item-2">Music</a>
 					<a class="list-group-item list-group-item-action" href="#list-item-3">Game</a>
@@ -66,13 +66,14 @@
 	  			</div>
 	  			<div class="col-8">
 		        	<div class="list-group-item" >
-		        		<div class="card-deck">
+		        		<div class="card-deck mb-3">
 							<div class="card text-center">
 								<img class="card-img-top" src="../images/anime.png" alt="Card image cap">
 								<div class="card-body">
 								    <h5 class="card-title">Anime</h5>
 								    <p class="card-text ">Multiple choice is a form of an objective assessment in which respondents are asked to select only correct answers out of the choices from a list.</p>
-								    <a href="#" class="btn btn-primary">Go to detail</a>
+								    <a href="#detail-anime" class="btn btn-primary">Go to detail</a>
+
 							  	</div>
 							</div>
 							<div class="card text-center">
