--- a/html/type-detail.html
+++ b/html/type-detail.html
@@ -41,7 +41,7 @@
 					<div class="nav-item">
 					    <a class="nav-link" href="#">Login</a>
 					</div>
-					<button type="button" class="btn btn-secondary">Regester</button>
+					<button type="button" class="btn btn-dark">Regester</button>
 			    </form>  
 			</nav>
 			
@@ -57,14 +57,14 @@
 				</ol>
 			</nav>
 			<div class="row">
-				<div class="col-4">
+				<div class="col-sm-4 pl-3">
 					<a class="list-group-item list-group-item-success" href="#list-item-1"><h5>Menu</h5></a>
 					<a class="list-group-item list-group-item-action" href="#list-item-1">Anime</a>
 					<a class="list-group-item list-group-item-action" href="#list-item-2">Music</a>
 					<a class="list-group-item list-group-item-action" href="#list-item-3">Game</a>
 					<a class="list-group-item list-group-item-action" href="#list-item-4">English</a>
 	  			</div>
-	  			<div class="col-8">
+	  			<div class="col-sm-8">
 		        	<div class="list-group-item" >
 		        		<div class="card-deck mb-3">
 							<div class="card text-center">
@@ -72,7 +72,7 @@
 								<div class="card-body">
 								    <h5 class="card-title">Anime</h5>
 								    <p class="card-text ">Multiple choice is a form of an objective assessment in which respondents are asked to select only correct answers out of the choices from a list.</p>
-								    <a href="#detail-anime" class="btn btn-primary">Go to detail</a>
+								    <a href="#" class="btn btn-success">Go to detail</a>
 
 							  	</div>
 							</div>
@@ -81,7 +81,7 @@
 								<div class="card-body">
 								    <h5 class="card-title">Music</h5>
 								    <p class="card-text">Multiple choice is a form of an objective assessment in which respondents are asked to select only correct answers out of the choices from a list.</p>
-								    <a href="#" class="btn btn-primary">Go to detail</a>
+								    <a href="#" class="btn btn-success">Go to detail</a>
 				                </div>
 							</div>					
 						</div>
@@ -91,7 +91,7 @@
 								<div class="card-body">
 								    <h5 class="card-title">Game</h5>
 								    <p class="card-text">Multiple choice is a form of an objective assessment in which respondents are asked to select only correct answers out of the choices from a list.</p>
-								    <a href="#" class="btn btn-primary">Go to detail</a>
+								    <a href="#" class="btn btn-success">Go to detail</a>
 							  	</div>
 							</div>
 							<div class="card text-center">
@@ -99,7 +99,7 @@
 								<div class="card-body">
 								    <h5 class="card-title">English</h5>
 								    <p class="card-text">Multiple choice is a form of an objective assessment in which respondents are asked to select only correct answers out of the choices from a list.</p>
-								    <a href="#" class="btn btn-primary">Go to detail</a>
+								    <a href="#" class="btn btn-success">Go to detail</a>
 							  	</div>
 							</div>					
 						</div>
