--- a/html/homepage-after.html
+++ b/html/homepage-after.html
@@ -1,78 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>BKQUIZ</title>
-	<link rel="stylesheet" href="../css/styles.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</head>
-<body>
-	<div class="container">
-		<!------------------ -------------------- ----------------------  
-		  					  HEADER : NOT CHANGE
-		-------------------- -------------------- ---------------------->
-		<div class="header">
-			<nav class="navbar navbar-expand-lg" > 
-			    <a class="navbar-brand" href="#">
-			    	<img src="../images/logo.png" class="logo-bkquiz" alt="Cinque Terre" >
-			        
-			    </a>
-			    
-			    <nav aria-label="breadcrumb" class="mr-auto ml-5 mt-1">
-				    <ul class="navbar-nav" > 
-					    <li class="nav-item">
-					      <a class="nav-link" href="#">Home</a>
-					    </li>
-					    <li class="nav-item dropdown">
-						    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Category</a>
-						    <div class="dropdown-menu bg-success">
-						      <a class="dropdown-item" href="#">Anime</a>
-						      <a class="dropdown-item" href="#">Music</a>
-						      <a class="dropdown-item" href="#">Game</a>
-						      <div class="dropdown-divider"></div>
-						      <a class="dropdown-item" href="#">English</a>
-						    </div>
-						</li>
-					</ul>					    
-				</nav>
-	            <form class="form-inline pl-5 my-2 my-lg-0">		
-					<div class="nav-item">
-					    <a class="nav-link" href="#">Login</a>
-					</div>
-					<button type="button" class="btn btn-dark">Register</button>
-			    </form>  
-			</nav>
-			
-		</div> <!-- the end header -->
-		
-		<!------------------ -------------------- ----------------------  
-		  					  BODY : CODE IN HERE
-		-------------------- -------------------- ---------------------->
-		<div class="body">
-			
-		</div> <!-- the end body -->
-		
-		<!------------------ -------------------- ----------------------  
-		  					  FOOTER : NOT CHANGE
-		-------------------- -------------------- ---------------------->
-		<div class="footer">
-			<div class="footer mt-4 p-5">
-				<div class="container text-center">
-					<div class="row">
-						<div class="col-sm-12">
-							<p class="text-white">Footer information ...</p>
-							<a href="" class="active">Link 1|</a>
-							<a href="" class="disabled">Link 2 |</a>
-							<a href="" class="avtive">Link 3</a>
-						</div>
-					</div>
-				</div>
-			</div> 
-		</div> <!-- the end footer -->
-	</div> <!-- the end container -->
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <title>Homepage after login</title>
+      <link rel="stylesheet" href="../css/styles.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+   </head>
+   <body>
+      <div class="container">
+         <!------------------ -------------------- ----------------------  
+            HEADER : NOT CHANGE
+            -------------------- -------------------- ---------------------->
+         <div class="header">
+            <nav class="navbar navbar-expand-lg" >
+               <a class="navbar-brand" href="#">
+               <img src="../images/logo.png" class="logo-bkquiz" alt="Cinque Terre" >
+               </a>
+               <nav aria-label="breadcrumb" class="mr-auto ml-5 mt-1">
+                  <ul class="navbar-nav" >
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                     </li>
+                     <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Category</a>
+                        <div class="dropdown-menu bg-success">
+                           <a class="dropdown-item" href="#">Anime</a>
+                           <a class="dropdown-item" href="#">Music</a>
+                           <a class="dropdown-item" href="#">Game</a>
+                           <div class="dropdown-divider"></div>
+                           <a class="dropdown-item" href="#">English</a>
+                        </div>
+                     </li>
+                  </ul>
+               </nav>
+               <form class="form-inline pl-5 my-2 my-lg-0">
+                  <div class="nav-item">
+                     <a class="nav-link" href="#">Login</a>
+                  </div>
+                  <button type="button" class="btn btn-dark">Register</button>
+               </form>
+            </nav>
+         </div>
+         <!-- the end header -->
+         <!------------------ -------------------- ----------------------  
+            BODY : CODE IN HERE
+            -------------------- -------------------- ---------------------->
+         <div class="body">
+            <div class="popular-quizs-category">
+               <p>Popular quizs <span class="badge badge-pill badge-danger total-view" > Total view : 10.000</span></p>
+            </div>
+            <div class="list-group-item">
+               <div class="row">
+                  <div class="col-sm-4">
+                     <section>
+                        <header class="card__header">
+                           <h2>Mozard <span class="badge badge-pill badge-danger total-view" >10.000</span></h2>
+                           <p class="readmore offset-bottom-0">
+                              <a href="#"><span>Quiz</span></a>
+                           </p>
+                           <img src="../images/quiz-mozard.png" alt="" class="img-category">
+                        </header>
+                        <div class="card__body text-description">
+                           <p>
+Mozart c. 1780, detail from portrait by Johann Nepomuk della Croce
+
+Anonymous portrait of the child Mozart, possibly by Pietro Antonio Lorenzoni; painted in 1763 on commission from Leopold Mozart
+Wolfgang Amadeus Mozart (27 January 1756 – 5 December 1791), baptised as Johannes Chrysostomus Wolfgangus Theophilus Mozart, was a prolific and influential composer of the classical era.</p>
+                        </div>
+                     </section>
+                  </div>
+                  <div class="col-sm-4">
+                     <section>
+                        <header class="card__header">
+                           <h2>LoL <span class="badge badge-pill badge-danger total-view" >10.000</span></h2>
+                           <p class="readmore offset-bottom-0">
+                              <a href="#"><span>Quiz</span></a>
+                           </p>
+                           <img src="../images/quiz-lol.png" alt="" class="img-category">
+                        </header>
+                        <div class="card__body text-description">
+                           <p>League of Legends (abbreviated LoL) is a multiplayer online battle arena video game developed and published by Riot Games for Microsoft Windows and macOS. The game follows a freemium model and is supported by microtransactions, and was inspired by the Warcraft III: The Frozen Throne mod, Defense of the Ancients.</p>
+                        </div>
+                     </section>
+                  </div>
+                  <div class="col-sm-4">
+                     <section>
+                        <header class="card__header">
+                           <h2>Naruto <span class="badge badge-pill badge-danger total-view" >10.000</span></h2>
+                           <p class="readmore offset-bottom-0">
+                              <a href="#"><span>Quiz</span></a>
+                           </p>
+                           <img src="../images/quiz-naruto.png" alt="" class="img-category">
+                        </header>
+                        <div class="card__body text-description">
+                           <p>Naruto Uzumaki (Japanese: うずまき ナルト Hepburn: Uzumaki Naruto) is a fictional character in the anime and manga Naruto, created by Masashi Kishimoto. The eponymous protagonist of the series is a teen ninja from the fictional village of Konohagakure. The villagers ridicule Naruto on account of the Nine-Tailed Demon Fox—a malevolent creature that attacked Konohagakure—that was sealed away in Naruto's body..</p>
+                        </div>
+                     </section>
+                  </div>
+               </div>
+            </div>
+            <div class="popular-quizs-category seconds">
+               <p>Popular category <span class="badge badge-pill badge-danger total-view" > Total view : 12.000</span></p>
+            </div>
+            <div class="list-group-item">
+               <div class="row">
+                  <div class="col-sm-4">
+                     <section>
+                        <header class="card__header">
+                           <h2>Game <span class="badge badge-pill badge-danger total-view" >10.000</span></h2>
+                           <p class="readmore offset-bottom-0">
+                              <a href="#"><span>View all</span></a>
+                           </p>
+                           <img src="../images/category-game-1.png" alt="" class="img-category">
+                        </header>
+                        <div class="card__body text-description">
+                           <p>Games are sometimes played purely for entertainment, sometimes for achievement or reward as well. They can be played alone, in teams, or online; by amateurs or by professionals. The players may have an audience of non-players, such as when people are entertained by watching a chess championship. On the other hand, players in a game may constitute their own audience as they take their turn to play. Often, part of the entertainment for children playing a game is deciding who is part of their audience and who is a player.</p>
+                        </div>
+                     </section>
+                  </div>
+                  <div class="col-sm-4">
+                     <section>
+                        <header class="card__header">
+                           <h2>English <span class="badge badge-pill badge-danger total-view" >10.000</span></h2>
+                           <p class="readmore offset-bottom-0">
+                              <a href="#"><span>View all</span></a>
+                           </p>
+                           <img src="../images/category-english.png" alt="" class="img-category">
+                        </header>
+                        <div class="card__body text-description">
+                           <p>English has developed over the course of more than 1,400 years. The earliest forms of English, a set of Anglo-Frisian dialects brought to Great Britain by Anglo-Saxon settlers in the 5th century, are called Old English. Middle English began in the late 11th century with the Norman conquest of England and was a period in which the language was influenced by French.Early Modern English began in the late 15th century with the introduction of the printing press to London, the printing of the King James Bible and the start of the Great Vowel Shift</p>
+                        </div>
+                     </section>
+                  </div>
+                  <div class="col-sm-4">
+                     <section>
+                        <header class="card__header">
+                           <h2>Anime <span class="badge badge-pill badge-danger total-view" >10.000</span></h2>
+                           <p class="readmore offset-bottom-0">
+                              <a href="#"><span>View all</span></a>
+                           </p>
+                           <img src="../images/category-anime-2.png" alt="" class="img-category">
+                        </header>
+                        <div class="card__body text-description">
+                           <p>The word anime is the Japanese term for animation, which means all forms of animated media.Outside Japan, anime refers specifically to animation from Japan or as a Japanese-disseminated animation style often characterized by colorful graphics, vibrant characters and fantastical themes.The culturally abstract approach to the word's meaning may open up the possibility of anime produced in countries other than Japan For simplicity, many Westerners strictly view anime as a Japanese animation product.Some scholars suggest defining anime as specifically or quintessentially Japanese may be related to a new form of Orientalism.</p>
+                        </div>
+                     </section>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- the end body -->
+         <!------------------ -------------------- ----------------------  
+            FOOTER : NOT CHANGE
+            -------------------- -------------------- ---------------------->
+         <div class="footer">
+            <div class="footer mt-4 p-5">
+               <div class="container text-center">
+                  <div class="row">
+                     <div class="col-sm-4">
+                     </div>
+                     <div class="col-sm-4">
+                     </div>
+                     <div class="col-sm-4">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- the end footer -->
+      </div>
+      <!-- the end container -->
+   </body>
 </html>
